--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -38,10 +38,18 @@
                   <ion-label class="sensor_black_label" position="floating">Day Target Value</ion-label>
                   <ion-input formControlName="day_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="controlForm.get('day_tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                <p *ngIf="controlForm.get('day_tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('day_tgt').errors.min.min}}.</p>
+                <p *ngIf="controlForm.get('day_tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('day_tgt').errors.max.max}}.</p>
+
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Night Target Value</ion-label>
                   <ion-input formControlName="night_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="controlForm.get('night_tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                <p *ngIf="controlForm.get('night_tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('night_tgt').errors.min.min}}.</p>
+                <p *ngIf="controlForm.get('night_tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('night_tgt').errors.max.max}}.</p>
+
             </ion-list>
             <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col class="no_padding" size="12">
@@ -49,10 +57,12 @@
                   <ion-label class="sensor_black_label" position="floating">Target Value</ion-label>
                   <ion-input formControlName="tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="controlForm.get('tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                <p *ngIf="controlForm.get('tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('tgt').errors.min.min}}.</p>
+                <p *ngIf="controlForm.get('tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('tgt').errors.max.max}}.</p>
+
               </ion-col>
             </ion-row>
-            <p *ngIf="controlForm.errors?.targetReq">Target cannot be empty.</p>
-            <p *ngIf="controlForm.errors?.dnReq">Day/Night targets cannot be empty.</p>
             <h3 class="h3_sensor_title">Power Outlets</h3>
             <ion-list>
               <ion-item lines="none">
@@ -68,7 +78,7 @@
                 <ion-button slot="end" (click)="presentAddPowerOutletModal('Water Cooler', 'down_ctrl')">{{ isPowerOutletSetup('Water Cooler')? "Edit": "Setup"}}</ion-button>
               </ion-item>
             </ion-list>
-            <p *ngIf="waterTemperatureForm.errors?.noneEnabled">If not monitoring, at least one control must be enabled.</p>
+            <p *ngIf="waterTemperatureForm.errors?.noneEnabled" class="error_msg">If not monitoring, at least one control must be enabled.</p>
           </div>
           <h3 class="h3_sensor_title">Alarm Settings</h3>
           <ion-list>
@@ -76,12 +86,20 @@
                 <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                 <ion-input formControlName="alarm_min" type="number" class="temp_unit"></ion-input>
               </ion-item>
+              <p *ngIf="waterTemperatureForm.get('alarm_min').errors?.required" class="error_msg">This is a required value.</p>
+              <p *ngIf="waterTemperatureForm.get('alarm_min').errors?.min" class="error_msg">This value must be at least {{waterTemperatureForm.get('alarm_min').errors.min.min}}.</p>
+              <p *ngIf="waterTemperatureForm.get('alarm_min').errors?.max" class="error_msg">This value must be at most {{waterTemperatureForm.get('alarm_min').errors.max.max}}.</p>
+
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                 <ion-input formControlName="alarm_max" type="number" class="temp_unit"></ion-input>
               </ion-item>
+              <p *ngIf="waterTemperatureForm.get('alarm_max').errors?.required" class="error_msg">This is a required value.</p>
+              <p *ngIf="waterTemperatureForm.get('alarm_max').errors?.min" class="error_msg">This value must be at least {{waterTemperatureForm.get('alarm_max').errors.min.min}}.</p>
+              <p *ngIf="waterTemperatureForm.get('alarm_max').errors?.max" class="error_msg">This value must be at most {{waterTemperatureForm.get('alarm_max').errors.max.max}}.</p>
+
           </ion-list>
-          <p *ngIf="waterTemperatureForm.errors?.compareError">Alarm min must be lower than Alarm max.</p>
+          <p *ngIf="waterTemperatureForm.errors?.compareError" class="error_msg">Alarm min must be lower than Alarm max.</p>
         </div>
       </form>
     </ion-grid>
