--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -1,12 +1,13 @@
 <ion-card class="dashboard-card">
   <ion-card-content>
     <ion-grid class="no_padding">
-      <!--
+      
       <ion-row>
         <ion-col class="no_padding" size="6">
           <h3 class="header-title" lines="none">{{ sensor.display_name }}</h3>
+          <h3 class="header-unit" lines="none" *ngIf="sensor.sensorUnit"> ({{ sensor.sensorUnit }})</h3>
           <ion-item lines="none">
-            <h1>{{ currentVal }}{{sensor.sensorUnit}}</h1>
+            <h1>{{ currentVal }}</h1>
             <ion-icon class="check-icon" name="checkmark-circle"></ion-icon>
           </ion-item>
         </ion-col>
@@ -21,10 +22,11 @@
             <ion-label class="title">Alarm Settings</ion-label>
             <div>
               <ion-icon name="alarm"></ion-icon>
-              <ion-label class="value">{{ sensor.alarm_min + ' - ' + sensor.alarm_max }} {{sensor.sensorUnit}}</ion-label>
+              <ion-label class="value">{{ sensor.alarm_min + ' - ' + sensor.alarm_max }}</ion-label>
             </div>
         </ion-col>
-      </ion-row>-->
+      </ion-row>
+      <!--
       <ion-row>
         <ion-icon name="locate-outline"></ion-icon>
         <h3 class="header-title" lines="none">{{ sensor.display_name }}</h3>
@@ -35,6 +37,7 @@
         <h3 class="header-title" lines="none">Target Value</h3>
         <h3 class="justify_right header-title">{{ sensor.tgt }}{{sensor.sensorUnit}}</h3>
       </ion-row>
+    -->
     </ion-grid>
   </ion-card-content>
 </ion-card>
