--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -6,9 +6,8 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
+          <ion-icon slot="start" name="alert-circle-outline" class="form-warning-icon" color="danger" *ngIf="!ecForm.valid"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">EC</h3>
-          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!ecForm.valid"></ion-icon>
-
         </ion-item>
       </ion-row>
       
