--- a/Automation-App/src/app/components/grow-lights/grow-lights.component.html
+++ b/Automation-App/src/app/components/grow-lights/grow-lights.component.html
@@ -6,8 +6,8 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
+          <ion-icon slot="start" name="alert-circle-outline" class="form-warning-icon" color="danger" *ngIf="!growLightsForm.valid"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">Grow Lights</h3>
-          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!growLightsForm.valid"></ion-icon>
         </ion-item>
       </ion-row>
 
