--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -6,9 +6,9 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
+          <ion-icon slot="start" class="form-warning-icon" name="alert-circle-outline" color="danger" *ngIf="!phForm.valid"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">PH</h3>
-          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!phForm.valid"></ion-icon>
-        </ion-item>
+        </ion-item>   
       </ion-row>
       <!--Card Content-->
       <form [formGroup]="phForm">
