--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -5,8 +5,8 @@
         <ion-item tappable (click)="toggleAccordion()" lines="none">
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
+          <ion-icon slot="start" name="alert-circle-outline" class="form-warning-icon" color="danger" *ngIf="!reservoirForm.valid"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">Reservoir</h3>
-          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!reservoirForm.valid"></ion-icon>
         </ion-item>
       </ion-row>
       <form [formGroup]="reservoirForm">
