--- a/Automation-App/src/app/dashboard/control/control.page.html
+++ b/Automation-App/src/app/dashboard/control/control.page.html
@@ -1,11 +1,16 @@
 <ion-content class="gradient_background">
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="onSettingsFormSubmit()" [disabled]="!isDirty">
+      <ion-icon name="save-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <div class="content">
 
     <div *ngIf="currentDevice != null">
       <form [formGroup]="settingsForm">
         <div>
           <h2 class="h2_title inline-heading">{{ currentDevice.name }}</h2>
-          <ion-button class="inline-button" (click)="onSettingsFormSubmit()" [disabled]="!isDirty">Save</ion-button>
+          <!--<ion-button class="inline-button" (click)="onSettingsFormSubmit()" [disabled]="!isDirty">Save</ion-button>-->
           <ion-button class="start-button" (click)="onBootButtonClick()">{{ currentDevice.device_started? stopDeviceString: startDeviceString }}</ion-button>
         </div>
 
