--- a/Automation-App/src/app/add-climate-controller/add-climate-controller.page.html
+++ b/Automation-App/src/app/add-climate-controller/add-climate-controller.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Setup System</ion-title>
+    <ion-title>Setup Climate Controller</ion-title>
     <ion-buttons slot="end">
       <ion-button  (click)="dismiss()"><ion-icon name="back"></ion-icon></ion-button>
     </ion-buttons>
@@ -8,8 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <div class="content">
-    <form [formGroup]="systemForm" (ngSubmit)="onSubmit()">
+  <div class="content" *ngIf="!isLoading">
+    <form [formGroup]="climateControllerForm" (ngSubmit)="onSubmit()">
       <ion-grid>
         <ion-row>
           <ion-col size="7">
@@ -25,8 +25,8 @@
         <ion-card-content>
           <ion-list>
             <ion-item>
-              <ion-label position="floating">System Name</ion-label>
-              <ion-input formControlName="system_name"></ion-input>
+              <ion-label position="floating">Climate Controller Name</ion-label>
+              <ion-input formControlName="grow_room_name"></ion-input>
             </ion-item>
             <ion-item>
               <ion-label>Select a Cluster</ion-label>
@@ -48,11 +48,11 @@
         </ion-card-content>
       </ion-card>
       <h2>Sensor List</h2>
-      <grow-lights *ngIf="growLights" [parentForm]="sensorsForm"></grow-lights>
-      <ph *ngIf="ph" [parentForm]="sensorsForm"></ph>
-      <ec *ngIf="ec" [parentForm]="sensorsForm"></ec>
-      <water-temp *ngIf="waterTemp" [parentForm]="sensorsForm"></water-temp>
-      <reservoir *ngIf="reservoir" [parentForm]="sensorsForm"></reservoir>
+      <air-temperature *ngIf="air_temperature" [parentForm]="sensorsForm"></air-temperature>
+      <humidity *ngIf="humidity" [parentForm]="sensorsForm"></humidity>
     </form>
+  </div>
+  <div *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
   </div>
 </ion-content>
