--- a/Automation-App/src/app/dashboard/control/control.page.scss
+++ b/Automation-App/src/app/dashboard/control/control.page.scss
@@ -11,6 +11,8 @@ ion-label {
 
 .start-button {
     width: max-content;
+    float: right;
+    margin-right: 10px;;
 }
 
 .content {
@@ -20,6 +22,7 @@ ion-label {
 }
 
 .inline-heading {
+    margin-top: 10px;
     display: inline-block;
 }
 
