--- a/Automation-App/src/app/components/co2/co2.component.scss
+++ b/Automation-App/src/app/components/co2/co2.component.scss
@@ -1,6 +1,6 @@
-.airTemperature_unit::after{
+.co2_unit::after{
     color: gray;
-    content: "°C";
+    content: "ppm";
 }
 
 .sw-prevent-invalid {
