no power outlets message added to monitoring page

--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -49,6 +49,11 @@ h6 {
     display: inline;
 }
 
+.gray-text {
+    color: gray;
+    font-weight: 600;
+}
+
 .header-title {
     font-weight: 700;
     color: black;
