--- a/Automation-App/src/app/add-power-outlet/add-power-outlet.page.html
+++ b/Automation-App/src/app/add-power-outlet/add-power-outlet.page.html
@@ -23,7 +23,7 @@
           <ion-col size="10" offset="1">
             <ion-item>
               <ion-label>Test Outlet</ion-label>
-              <ion-toggle class="button" (ngModel)="outletToggleVal" (ionChange)="toggleOutlet()" style="float: right;">Test Outlet</ion-toggle>
+              <ion-toggle class="button" [(ngModel)]="outletToggleVal" (ionChange)="toggleOutlet()" style="float: right;">Test Outlet</ion-toggle>
             </ion-item>
           </ion-col>
         </ion-row>
