--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -14,13 +14,16 @@
         <ion-label class="tab-label">Warnings</ion-label>
       </ion-tab-button>-->
       <ion-tab-button (click)="navigateToTab('monitoring')">
-        <ion-icon name="analytics-outline"></ion-icon>
+        <ion-icon name="tv-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button (click)="navigateToTab('control')">
         <ion-icon name="options-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button (click)="navigateToTab('cameras')">
         <ion-icon name="camera-outline"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button (click)="navigateToTab('analytics')">
+        <ion-icon name="analytics-outline"></ion-icon>
       </ion-tab-button>
     </ion-tab-bar> 
   </ion-tabs>
