Initial styling ported from camera, d3 working in sensor-graph

--- a/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
+++ b/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
@@ -1,3 +1,11 @@
-<p>
-  sensor-graph works!
-</p>
+<ion-card class="dashboard-card">
+  <ion-card-header>
+    <ion-toolbar>
+      <ion-title>Graph title</ion-title>
+    </ion-toolbar>
+  </ion-card-header>
+  <ion-card-content>
+    <p>Graph below</p>
+    <svg></svg>
+  </ion-card-content>
+</ion-card>
