--- a/Automation-App/src/app/dashboard/analytics/analytics.page.html
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.html
@@ -1,5 +1,9 @@
 <ion-content class="gradient_background">
-  <h2>Analytics</h2>
+  <div class="content">
+    <ion-toolbar>
+      <h2>Analytics</h2>
+    </ion-toolbar>  
+  </div>
   <div><!--add ngIf-->
     <div><!--add ngFor-->
       <sensor-graph></sensor-graph>
