--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -14,17 +14,21 @@
         <ion-label class="tab-label">Warnings</ion-label>
       </ion-tab-button>-->
       <ion-tab-button (click)="navigateToTab('monitoring')">
-        <ion-icon name="analytics-outline"></ion-icon>
+        <ion-icon name="analytics-outline"></ion-icon> Monitoring
       </ion-tab-button>
-      <ion-tab-button (click)="navigateToTab('control')">
+      <ion-tab-button (click)="navigateToTab('control')"> Control
         <ion-icon name="options-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button (click)="navigateToTab('cameras')">
-        <ion-icon name="camera-outline"></ion-icon>
+        <ion-icon name="camera-outline"></ion-icon> Cameras
       </ion-tab-button>
     </ion-tab-bar> 
+    <div slot="top">
+      <connection-status [mqttStatus]="mqttService.mqttStatus.value"></connection-status>
+    </div>
   </ion-tabs>
 </ion-content>
+
 
 
 
