css of identify page fixed

--- a/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
+++ b/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-  <div class="content" class="gradient_background">
+  <div class="content gradient_background">
     <form [formGroup]="fertigationSystemForm" (ngSubmit)="onSubmit()">
       <ion-grid>
         <ion-row>
