general settings component created

--- a/Automation-App/src/app/components/general-settings/general-settings.component.html
+++ b/Automation-App/src/app/components/general-settings/general-settings.component.html
@@ -18,17 +18,7 @@
               <ion-col class="no_padding" size="12">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Device Name</ion-label>
-                  <ion-input formControlName="device_name"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            
-            <h3 class="h3_sensor_title">Reservoir Settings</h3>
-            <ion-row>
-              <ion-col class="no_padding" size="12">
-                <ion-item>
-                  <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
-                  <ion-input formControlName="reserv_size" type="number"></ion-input>
+                  <ion-input formControlName="name"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
