--- a/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
+++ b/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
@@ -20,24 +20,7 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-      <ion-card>
-        <ion-card-content>
-          <ion-list>
-            <ion-item>
-              <ion-label position="floating">Device Name</ion-label>
-              <ion-input formControlName="name"></ion-input>
-            </ion-item>
-            <!-- <ion-item>
-              <ion-label>Select a Plant</ion-label>
-              <ion-select #plantSelect placeholder="Plant" formControlName="plant_name" [interfaceOptions]="plantAlertOptions" [(ngModel)]="plantName" (ionChange)="addRecommendedSettings(plantSelect.value)">
-                <ion-select-option *ngFor="let plant of variableManagementService.plants" [value]="plant">
-                  {{ plant.name }}
-                </ion-select-option>
-              </ion-select>
-            </ion-item> -->
-          </ion-list>
-        </ion-card-content>
-      </ion-card>
+     <general-settings [parentForm]="fertigationSystemForm"></general-settings>
       <h2>Sensor List</h2>
       <ph *ngIf="ph" [parentForm]="settingsForm"></ph>
       <ec *ngIf="ec" [parentForm]="settingsForm"></ec>
