--- a/Automation-App/src/app/add-device/identify-device/identify-device.page.html
+++ b/Automation-App/src/app/add-device/identify-device/identify-device.page.html
@@ -25,23 +25,6 @@
       <div class="text_center" style="text-align: center;">
         <ion-label color="danger">{{ status }}</ion-label>
       </div>
-      <!-- <ion-grid>
-        <ion-row>
-          <ion-col size="4" offset="4">
-            <ion-label color="danger">{{ status }}</ion-label>
-          </ion-col>
-        </ion-row>
-        <ion-row *ngIf="isLoading">
-          <ion-col size="2" offset="5">
-            <ion-spinner></ion-spinner>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4" offset="4">
-            <ion-button class="button" (click)="pingDevice()">Next</ion-button>
-          </ion-col>
-        </ion-row>
-      </ion-grid> -->
     </ion-card-content>
   </ion-card>
   
@@ -62,7 +45,7 @@
             <ion-spinner *ngIf="isLoading"></ion-spinner>
           </div>
           <div class="text_center">
-            <ion-button class="button" type="submit">Setup</ion-button>
+            <ion-button class="button" type="submit" [disabled]="wifiSettingsForm.invalid">Setup</ion-button>
           </div>
           <div class="text_center" style="text-align: center;">
             <ion-label color="danger">{{ status }}</ion-label>
