--- a/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
+++ b/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
@@ -13,15 +13,14 @@
       <ion-grid>
         <ion-row>
           <ion-col size="8">
-            <h2 class="general_settings">General Settings</h2>
+            <h2 class="general_settings">Fertigation System</h2>
           </ion-col>
           <ion-col size="4" class="button_col">
             <ion-button class="add_button" type="submit">Create</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
-     <general-settings [parentForm]="fertigationSystemForm"></general-settings>
-      <h2>Sensor List</h2>
+      <general-settings [parentForm]="fertigationSystemForm"></general-settings>
       <ph *ngIf="ph" [parentForm]="settingsForm"></ph>
       <ec *ngIf="ec" [parentForm]="settingsForm"></ec>
       <water-temp *ngIf="waterTemperature" [parentForm]="settingsForm" [powerOutlets]="powerOutlets" [topicID]="this.topicId" (newPowerOutletEvent)="onAddPowerOutlet($event)"></water-temp>
