fixed toggle power outlet bug in add power outlet page

--- a/Automation-App/src/app/components/general-settings/general-settings.component.html
+++ b/Automation-App/src/app/components/general-settings/general-settings.component.html
@@ -25,7 +25,7 @@
             <ion-row>
               <ion-col class="no_padding" size="12">
                 <ion-item>
-                    <ion-label>Recommended Environmental Settings</ion-label>
+                    <ion-label>Recommended Settings</ion-label>
                     <ion-select #plantSelect placeholder="Plant" formControlName="plant_name" [interfaceOptions]="plantAlertOptions" (ionChange)="addRecommendedSettings(plantSelect.value)">
                       <ion-select-option *ngFor="let plant of plants" [value]="plant">
                         {{ plant.name }}
