--- a/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
+++ b/Automation-App/src/app/add-fertigation-system/add-fertigation-system.page.html
@@ -16,7 +16,7 @@
             <h2 class="general_settings">Fertigation System</h2>
           </ion-col>
           <ion-col size="4" class="button_col">
-            <ion-button class="add_button" type="submit">Create</ion-button>
+            <ion-button class="add_button" type="submit" [disabled]="fertigationSystemForm.invalid">Create</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
