Sensor graph has demo d3js graph, analytics page uses varman to fetch from backend

--- a/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
+++ b/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
@@ -5,7 +5,6 @@
     </ion-toolbar>
   </ion-card-header>
   <ion-card-content>
-    <p>Graph below</p>
-    <svg></svg>
+    <div id="wrapper"></div>
   </ion-card-content>
 </ion-card>
