--- a/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
+++ b/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
@@ -1,10 +1,15 @@
 <ion-card class="dashboard-card">
   <ion-card-header>
     <ion-toolbar>
-      <ion-title>Graph title</ion-title>
+      <ion-title id="title">{{sensorDisplay}}</ion-title>
     </ion-toolbar>
   </ion-card-header>
   <ion-card-content>
-    <div id="wrapper"></div>
+    <div id="{{sensorType}}">
+      <!-- viewBox and preserveAspectRatio is what makes this scale nice. See https://riptutorial.com/svg/example/23518/preserveaspectratio#:~:text=preserveAspectRatio%20is%20an%20attribute%20that%20indicates%20whether%20the,none%2C%20the%20icon%20stretches%20to%20fit%20the%20box%3A-->
+      <svg id="{{sensorType + '-svg'}}" viewBox = "0 0 500 225" preserveAspectRatio="xMidYMid">
+        <g id="{{sensorType + '-g'}}"></g>
+      </svg>
+    </div>
   </ion-card-content>
 </ion-card>
