Changed graph title style match h3 style in monitoring page

--- a/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
+++ b/Automation-App/src/app/components/sensor-graph/sensor-graph.component.html
@@ -1,8 +1,6 @@
 <ion-card class="dashboard-card">
   <ion-card-header>
-    <ion-toolbar>
-      <ion-title id="title">{{sensorDisplay}}</ion-title>
-    </ion-toolbar>
+      <h3 class="header-title" id="title">{{sensorDisplay}}</h3>
   </ion-card-header>
   <ion-card-content>
     <div id="{{sensorType}}">
