--- a/Automation-App/src/app/components/sensor-graph/sensor-graph.component.scss
+++ b/Automation-App/src/app/components/sensor-graph/sensor-graph.component.scss
@@ -9,3 +9,12 @@
 ion-card-header {
     padding: 10px;
 }
+
+.header-title {
+    font-weight: 700;
+    color: black;
+    font-size: 120%;
+    margin-left: 10px;
+    margin-bottom: 0px;
+    display: inline;
+}
