Changes before MQTT test

--- a/Automation-App/src/app/dashboard/analytics/analytics.page.scss
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.scss
@@ -10,3 +10,11 @@ ion-toolbar{
     --background: transparent;
     padding-top: 8px;
 }
+
+ion-item{
+    --background: transparent;
+}
+
+ion-select{
+    color: white;
+}
