--- a/Automation-App/src/app/dashboard/analytics/analytics.page.html
+++ b/Automation-App/src/app/dashboard/analytics/analytics.page.html
@@ -2,14 +2,50 @@
   <div class="content">
     <ion-toolbar>
       <h2>Analytics</h2>
-    </ion-toolbar>  
+    </ion-toolbar>
   </div>
+  <ion-item no-lines id="timeframe">
+    <ion-label style="color: white">Graph Timeframe</ion-label>
+    <ion-select (ionChange)="onSelectChange($event)" value={{defaultTimeframeValue}}>
+      <ion-select-option *ngFor="let option of timeframeOptions" value="{{option.value}}">{{option.label}}</ion-select-option>
+    </ion-select>
+  </ion-item>
   <div id="graph_container" *ngIf="existingSensors">
-    <sensor-graph *ngIf="existingSensors?.indexOf('ph') > -1" [historicalData]="historicalData" sensorType="ph" sensorDisplay="PH"></sensor-graph>
-    <sensor-graph *ngIf="existingSensors?.indexOf('ec') > -1" [historicalData]="historicalData" sensorType="ec" sensorDisplay="EC"></sensor-graph>
-    <sensor-graph *ngIf="existingSensors?.indexOf('water_temp') > -1" [historicalData]="historicalData" sensorType="water_temp" sensorDisplay="Water Temperature"></sensor-graph>
-    <sensor-graph *ngIf="existingSensors?.indexOf('air_temp') > -1" [historicalData]="historicalData" sensorType="air_temp" sensorDisplay="Air Temperature"></sensor-graph>
-    <sensor-graph *ngIf="existingSensors?.indexOf('humidity') > -1" [historicalData]="historicalData" sensorType="humidity" sensorDisplay="Humidity"></sensor-graph>
-    <sensor-graph *ngIf="existingSensors?.indexOf('co2') > -1" [historicalData]="historicalData" sensorType="co2" sensorDisplay="CO2"></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('ph') > -1"
+      [historicalData]="historicalData"
+      sensorType="ph"
+      sensorDisplay="PH"
+    ></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('ec') > -1"
+      [historicalData]="historicalData"
+      sensorType="ec"
+      sensorDisplay="EC"
+    ></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('water_temp') > -1"
+      [historicalData]="historicalData"
+      sensorType="water_temp"
+      sensorDisplay="Water Temperature"
+    ></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('air_temp') > -1"
+      [historicalData]="historicalData"
+      sensorType="air_temp"
+      sensorDisplay="Air Temperature"
+    ></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('humidity') > -1"
+      [historicalData]="historicalData"
+      sensorType="humidity"
+      sensorDisplay="Humidity"
+    ></sensor-graph>
+    <sensor-graph
+      *ngIf="existingSensors?.indexOf('co2') > -1"
+      [historicalData]="historicalData"
+      sensorType="co2"
+      sensorDisplay="CO2"
+    ></sensor-graph>
   </div>
 </ion-content>
