--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -36,6 +36,7 @@
               <ion-label class="sensor_black_label" position="floating">Next Replacement Date</ion-label>
               <ion-datetime displayFormat="MMM DD, h:mm a" placeholder="Select Time" formControlName="replace_date"></ion-datetime>
             </ion-item>
+            <p *ngIf="reservoirForm.get('replace_date').errors?.required" class="error_msg">This is a required value.</p>
           </ion-col>
         </ion-row>
         <ion-row>
@@ -44,6 +45,7 @@
               <ion-label class="sensor_black_label" position="floating">Replacement Interval</ion-label>
               <ion-input formControlName="replace_interv" type="number" class="day_unit"></ion-input>
             </ion-item>
+            <p *ngIf="reservoirForm.get('replace_interv').errors?.required" class="error_msg">This is a required value.</p>
             <p *ngIf="reservoirForm.get('replace_interv').errors?.min" class="error_msg">This value must be at least {{reservoirForm.get('replace_interv').errors.min.min}}.</p>
             <p *ngIf="reservoirForm.get('replace_interv').errors?.max" class="error_msg">This value must be at most {{reservoirForm.get('replace_interv').errors.max.max}}.</p>
           </ion-col>
@@ -60,6 +62,7 @@
             <ion-label class="sensor_black_label">Water Out</ion-label>
             <ion-button slot="end" (click)="presentAddPowerOutletModal('Reservoir Water Out')">{{ isPowerOutletSetup('Reservoir Water Out')? "Edit": "Setup"}}</ion-button>
           </ion-item>
+          <p *ngIf="reservoirForm.errors?.powerOutletNotSetup" class="error_msg">Both power outlets must be set up when replacement is enabled!</p>
         </ion-list>
         </div>
       </form>
